--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,6 +19,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="" class="dropdown-item">Tops</a>
                 <a href="" class="dropdown-item">Pants</a>
+                <a href="" class="dropdown-item">Trainers</a>
                 <a href="" class="dropdown-item">Accessories</a>
                 <a href="" class="dropdown-item">All Clothing</a>
             </div>
@@ -26,12 +27,24 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="equipment-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Equipment
+                Home Gym
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="equipment-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+            <div class="dropdown-menu border-0" aria-labelledby="home-link">
+                <a href="" class="dropdown-item">Machines</a>
+                <a href="" class="dropdown-item">Weights</a>
+                <a href="" class="dropdown-item">Accessories</a>
+                <a href="" class="dropdown-item">All Home gym</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="equipment-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Gym Accessories
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="gym-link">
+                <a href="" class="dropdown-item">Bags</a>
+                <a href="" class="dropdown-item">Accessories</a>
+                <a href="" class="dropdown-item">All Home gym</a>
             </div>
         </li>
 
