--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -14,14 +14,12 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clothing
+                Gymwear
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Tops</a>
-                <a href="" class="dropdown-item">Pants</a>
-                <a href="" class="dropdown-item">Trainers</a>
-                <a href="" class="dropdown-item">Accessories</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=mens" class="dropdown-item">Mens</a>
+                <a href="{% url 'products' %}?category=womens" class="dropdown-item">Womens</a>
+                <a href="{% url 'products' %}?category=mens,womens" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
@@ -30,10 +28,10 @@
                 Home Gym
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="home-link">
-                <a href="" class="dropdown-item">Machines</a>
-                <a href="" class="dropdown-item">Weights</a>
-                <a href="" class="dropdown-item">Accessories</a>
-                <a href="" class="dropdown-item">All Home gym</a>
+                <a href="{% url 'products' %}?category=machines" class="dropdown-item">Machines</a>
+                <a href="{% url 'products' %}?category=weights" class="dropdown-item">Weights</a>
+                <a href="{% url 'products' %}?category=home_gym_accessories" class="dropdown-item">Accessories</a>
+                <a href="{% url 'products' %}?category=machines,weights,home_gym_accessories" class="dropdown-item">All Home gym</a>
             </div>
         </li>
 
@@ -42,8 +40,8 @@
                 Gym Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="gym-link">
-                <a href="" class="dropdown-item">Bags</a>
-                <a href="" class="dropdown-item">Accessories</a>
+                <a href="{% url 'products' %}?category=bags" class="dropdown-item">Bags</a>
+                <a href="{% url 'products' %}?category=gym_accessories" class="dropdown-item">Accessories</a>
             </div>
         </li>
 
@@ -52,9 +50,9 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
