added product count for product pages and sorting bar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -84,7 +84,7 @@ body {
 }
 
 a.category-badge > span.badge:hover {
-    background: #212529 !important;
+    background: blue !important;
     color: #fff !important;
 }
 
