body font changed to make the website easier to read

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     height: calc(100vh -64px);
     color: blue;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Comfortaa', cursive;
 }
 
 /* from Bulma */
