--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,11 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-
+        <div id="delivery-banner" class="row text-center">
+            <div class="col bg-warning text-black">
+                <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>                
+            </div>            
+        </div>
     </header>
 
     {% if messages %}
