--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -43,6 +43,7 @@
                                 <td class="py-3">
                                     <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                                     <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                    <p class="my-0 small text-muted">Description: {{ item.product.description }}</p>
                                 </td>
                                 <td class="py-3">
                                     <p class="my-0">£{{ item.product.price }}</p>
