added has sizes option in database and turned that option on for clothing items

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,10 @@ body {
     font-family: 'Comfortaa', cursive;
 }
 
+.shop-now-padding {
+    margin-top: 30px;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
