--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,10 +11,10 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100 ">
+    <div class="container h-100 shop-now-padding">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+                <h1 class="display-6 logo-font text-black">
                     The latest gymwear and accessories
                 </h1>
                 <div class="my-5">
