changed colour of buttons to blue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,13 +32,13 @@ body {
 }
 
 .shop-now-button {
-    background: black;
+    background: blue;
     color: white;
     min-width: 260px;
 }
 
 .btn-black {
-    background: black;
+    background: blue;
     color: white;
 }
 
