crispy forms package installed and added to settings

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block_extra_css %}
-    <link rel="stylesheet" href="{% static 'checkout'css'checkout.css %}">
+    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
 {% block page_header %}
