--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 {% load bag_tools %}
-{% block_extra_css %}
+
+{% block extra_css %}
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
+
 
 {% block page_header %}
     <div class="container header-container">
@@ -15,7 +17,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container text-black">
         <div class="row">
             <div class="col">
                 <hr>
