--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -22,7 +22,7 @@
             <h2 class="logo-font mb-4">Thank You</h2>
             <hr>
             <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{
-                    order.email }}</strong>.</p>
+                    order_form.email }}</strong>.</p>
         </div>
     </div>
 
@@ -63,7 +63,8 @@
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="small mb-0 text-black font-weight-bold">
-                            {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size }}{% endif %}
+                            {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size|upper }}{%
+                            endif %}
                         </p>
                     </div>
                     <div class="col-12 col-md-8 text-md-right">
