corrected checkout server 500 error locally so will test on heroku deployment

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -57,6 +57,7 @@
                     <p class="my-0 small text-muted">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                 </div>
             </div>
+            {% endif %}
             {% endfor %}
             <hr class="my-0">
             <div class="row text-black text-right">
