--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -49,15 +49,14 @@
                 </div>
                 <div class="col-7">
                     <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                    <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{%
-                        endif %}</p>
+                    <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else
+                        %}N/A{%endif%}</p>
                     <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                 </div>
                 <div class="col-3 text-right">
                     <p class="my-0 small text-muted">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                 </div>
             </div>
-            {% endif %}
             {% endfor %}
             <hr class="my-0">
             <div class="row text-black text-right">
