--- a/templates/base.html
+++ b/templates/base.html
@@ -6,36 +6,39 @@
 <head>
 
     {% block meta %}
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
 
     {% block extra_meta %}
     {% endblock %}
 
     {% block corecss %}
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script
-        src="https://code.jquery.com/jquery-3.7.0.min.js"
-        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/a04ed0f7dc.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a04ed0f7dc.js" crossorigin="anonymous"></script>
 
-        <!-- Stripe -->
-        <script src="https://js.stripe.com/v3/"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -44,16 +47,20 @@
 
     <title>Shop Active {% block extra_title %}{% endblock %}</title>
 </head>
+
 <body>
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link"><h2 class="logo-font text-black my-0"><i class="fa-solid fa-heart-pulse"></i> Shop Active</h2></a>
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <h2 class="logo-font text-black my-0"><i class="fa-solid fa-heart-pulse"></i> Shop Active</h2>
+                </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                        <input class="form-control border border-black rounded-0" type="text" name="q"
+                            placeholder="Search our site">
                         <div class="input-group-append">
                             <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                                 <span class="icon">
@@ -67,7 +74,8 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
@@ -75,26 +83,27 @@
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                                {% endif %}
-                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% if request.user.is_superuser %}
+                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                            {% endif %}
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="{% url 'view_bag' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
-                                        £{{ grand_total|floatformat:2 }}
+                                    £{{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        £0.00
+                                    £0.00
                                     {% endif %}
                                 </p>
                             </div>
@@ -104,9 +113,10 @@
             </div>
         </div>
 
-       <div class="row bg-primary">
+        <div class="row bg-primary">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 {% include 'includes/mobile-top-header.html' %}
@@ -115,27 +125,28 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-warning text-black">
-                <h4 class="logo-font my-1 font-weight-bold">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>                
-            </div>            
+                <h4 class="logo-font my-1 font-weight-bold">Free delivery on orders over £{{ free_delivery_threshold }}!
+                </h4>
+            </div>
         </div>
     </header>
 
     {% if messages %}
-        <div class="message-container">
-            {% for message in messages %}
-                {% with message.level as level %}
-                    {% if level == 40 %}
-                        {% include 'includes/toasts/toast_error.html' %}
-                    {% elif level == 30 %}
-                        {% include 'includes/toasts/toast_warning.html' %}
-                    {% elif level == 25 %}
-                        {% include 'includes/toasts/toast_success.html' %}
-                    {% else %}
-                        {% include 'includes/toasts/toast_info.html' %}
-                    {% endif %}
-                {% endwith %}
-            {% endfor %}
-        </div>
+    <div class="message-container">
+        {% for message in messages %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% endif %}
+        {% endwith %}
+        {% endfor %}
+    </div>
     {% endif %}
 
     {% block page_header %}
@@ -144,10 +155,98 @@
     {% block content %}
     {% endblock %}
 
+    <!-- Footer -->
+    <footer class="bg-light">
+        <div class="container pt-5 text-black">
+            <div class="row">
+                <!-- Logo and social media links -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0"><a href="{% url 'home' %}" class="nav-link main-logo-link">
+                        <h2 class="logo-font text-black my-0"><i class="fa-solid fa-heart-pulse"></i> Shop Active</h2>
+                    </a>
+                    <p class="">Shop Active is an online shop selling gymwear, home gym equipment and gym accessories
+                    </p>
+                    <ul class="list-inline mt-4">
+                        <li class="list-inline-item"><a href="https://www.twitter.com" target="_blank" rel="noreferrer"
+                                aria-label="Go to our twitter page (opens in new tab)" title="twitter"><i
+                                    class="dark-green fa fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" rel="noreferrer"
+                                aria-label="Go to our facebook page (opens in new tab)" title="facebook"><i
+                                    class="dark-green fa fa-facebook"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank"
+                                rel="noreferrer" aria-label="Go to our instagram page (opens in new tab)"
+                                title="instagram"><i class="dark-green fa fa-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.pinterest.com" target="_blank"
+                                rel="noreferrer" aria-label="Go to our pinterest page (opens in new tab)"
+                                title="pinterest"><i class="dark-green fa fa-pinterest"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.snapchat.com" target="_blank" rel="noreferrer"
+                                aria-label="Go to our snapchat page (opens in new tab)" title="snapchat"><i
+                                    class="dark-green fa fa-snapchat"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+                    <h2 class="text-uppercase font-weight-bold mb-4 footer-text">Products</h2>
+                    <ul class="list-unstyled mb-0">
+                        <li class="mb-2"><a href="{% url 'products' %}?category=mens,womens"
+                                class="font-black">Gymwear</a></li>
+                        <li class="mb-2"><a href="{% url 'products' %}?category=machines,weights,home_gym_accessories"
+                                class="font-black">Home Gym</a></li>
+                        <li class="mb-2"><a href="{% url 'products' %}?category=gym_accessories"
+                                class="font-black">Accessories</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6 col-xs-6 mb-4 mb-lg-0">
+                    <h2 class="text-uppercase font-weight-bold mb-4 footer-text">Website</h2>
+                    <ul class="list-unstyled mb-0">
+                        {% if request.user.is_authenticated %}
+                        {% if request.user.is_superuser %}
+                        <li class="mb-2"><a href="{% url 'add_product' %}" class="font-black">Product Management</a>
+                        </li>
+                        <li class="mb-2"><a href="" class="font-black">News Item Management</a>
+                        </li>
+                        {% else %}
+                        <li class="mb-2"><a href="{% url 'profile' %}" class="font-black">My Profile</a></li>
+                        <li class="mb-2"><a href="" class="font-black">News</a></li>
+                        <li class="mb-2"><a href="" class="font-black">Sale</a></li>
+                        {% endif %}
+                        {% else %}
+                        <li class="mb-2"><a href="{% url 'account_signup' %}" class="font-black">Register</a></li>
+                        <li class="mb-2"><a href="{% url 'account_login' %}" class="font-black">Login</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-12 mb-lg-0">
+                    <!-- Newsletter signup -->
+                    <h2 class="text-uppercase font-weight-bold mb-4 footer-text">Newsletter</h2>
+                    <p class="mb-4">Sign up for a weekly newsletter for exclusive discounts</p>
+                    <div class="p-1 rounded border" id="mailing-list">
+                        <form id="mailinglistform" onsubmit="return sendMail(this);">
+                            <div class="input-group">
+                                <label for="email_address" hidden>Email Address:</label>
+                                <input type="email" placeholder="Enter your email address" id="email_address"
+                                    name="email_address" aria-describedby="newsletter"
+                                    class="form-control border-0 shadow-0">
+                                <div class="input-group-append">
+                                    <button id="newsletter" type="submit" value="newsletter"
+                                        class="btn btn-link green-btn">Signup</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Copyright information -->
+        <div class="bg-light py-1">
+            <div class="container text-center">
+                <p class="mb-0 py-2 footer-font">© 2023 All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
     {% block postloadjs %}
     <script src="{% static 'js/toast.js' %}"></script>
     {% endblock %}
-    
+
 </body>
 
 </html>
