--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %} 
 {% load static %} 
-{% block extra_title %}
-    Favourites
-{%endblock %} 
+{% block extra_title %}Favourites{%endblock %} 
 {% block page_header %}
 <div class="container header-container">
   <div class="row">
