--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -51,25 +51,10 @@
                 </div>
             </div>
                 <div class="center-div pt-3">
-                    <a class="btn black-btn" data-bs-toggle="modal" data-bs-target="#deleteFavourite{{ favourite.id }}">Delete</a>
-                <!-- Delete favourite modal -->
-                <div class="modal fade" id="deleteFavourite{{ favourite.id }}" tabindex="-1" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                            <h2 class="modal-title text-black">Delete Favourite</h2>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body font-black">
-                            Are you sure you want to delete this favourite?
-                        </div>
-                        <div class="modal-footer">
-                        <!-- Close and delete favourite buttons-->
-                            <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
-                            <a href="{% url 'remove_product_from_favourites' favourite.id 'favourites' %}" class="btn red-btn">Delete</a>
-                        </div>
-                    </div>
-                  </div>
+                        <form class="form" method="POST" action="{% url 'remove_product_from_favourites' favourite.id 'favourites' %}">
+                            {% csrf_token %}
+                            <button class="btn green-btn" type="submit"> Remove Favourite</button>
+                        </form>
                 </div>
               </div>
             </div>
