--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -131,6 +131,7 @@
                 <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
             </a>
         </div>
+</div>
 <hr>
 {% endblock %}
 
