--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="bg-primary text-center text-black">
   <!-- Grid container -->
-  <div class="container p-4 text-black">
+  <div class="container-fluid p-4 text-black">
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
@@ -139,7 +139,7 @@
               <a href="#!" class="text-black">Product Management</a>
             </li>
             <li>
-              <a href="#!" class="text-black">News Item Management</a>
+              <a href="#!" class="text-black">My Profile</a>
             </li>
             {% else %}
             <li>
@@ -168,7 +168,7 @@
   <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text-center p-3 container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2023 Copyright:
     <a class="text-white" href="https://shop-active.herokuapp.com/">Shop Active</a>
   </div>
