--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -22,7 +22,7 @@
             <h2 class="logo-font mb-4">Thank You</h2>
             <hr>
             <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{
-                    order.email }}</strong>.</p>
+                    Order.email }}</strong>.</p>
         </div>
     </div>
 
@@ -209,4 +209,5 @@
         </div>
     </div>
 </div>
+<hr>
 {% endblock %}
