commented code and correct python code errors

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+<!-- Page Header -->
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -9,7 +9,7 @@
         </div>
     </div>
 {% endblock %}
-
+<!-- Shows image background with button link to products -->
 {% block content %}
     <div class="container h-100 shop-now-padding">
         <div class="row h-100">
