--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,6 +24,7 @@
         </div>
     </div>
     <div class="row">
+<!-- Form for users defaulty delivery address -->
         <div class="col-12 col-lg-6">
             <p class="text-muted">Default Delivery Information</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
@@ -32,6 +33,7 @@
                 <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
             </form>
         </div>
+<!-- Section shows users order hsitory -->
         <div class="col-12 col-lg-6">
             <p class="text-muted">Order History</p>
             <div class="order-history table-responsive">
@@ -45,6 +47,7 @@
                         </tr>
                     </thead>
                     <tbody>
+                    <!-- For loop to display orders -->
                         {% for order in orders %}
                         <tr>
                             <td>
@@ -74,9 +77,9 @@
     </div>
 </div>
 <hr>
-    {% endblock %}
-
-    {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
-    {% endblock %}
+{% endblock %}
+<!-- Loads javascript for the country field of the form -->
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+{% endblock %}
