--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,4 @@
+/* CSS code, most has been copied and edited from the Boutique Ado Project by Code Institute */
 html {
     height: 100%;
     max-width: 100%;
