--- a/templates/base.html
+++ b/templates/base.html
@@ -13,16 +13,16 @@
 
     {% block extra_meta %}
     {% endblock %}
-
+<!-- External CSS -->
     {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
-
+<!-- External Extra CSS -->
     {% block extra_css %}
     {% endblock %}
-
+<!-- External JavaScript -->
     {% block corejs %}
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -43,7 +43,7 @@
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
-
+<!-- External Extra JavScript -->
     {% block extra_js %}
     {% endblock %}
 
@@ -53,6 +53,7 @@
 
 <body>
     <header class="container-fluid fixed-top">
+        <!-- Logo -->
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
@@ -74,6 +75,7 @@
                     </div>
                 </form>
             </div>
+            <!-- Users Account Link -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
@@ -117,6 +119,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
+                    <!-- Bag details -->
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                             href="{% url 'view_bag' %}">
                             <div class="text-center">
@@ -141,10 +144,12 @@
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+            <!-- Inlcudes the required store Nav Bars -->
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
+        <!-- Banner advertising free deliver on orders over £50 -->
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-warning text-black">
                 <h4 class="logo-font my-1 font-weight-bold">Free delivery on orders over £{{ free_delivery_threshold }}!
@@ -153,6 +158,7 @@
         </div>
     </header>
 
+<!-- Section that displays messages for actions throughout the website -->
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
@@ -180,6 +186,7 @@
     {% include 'includes/footer.html' %}
 
     {% block postloadjs %}
+<!-- Laods JavaScript for the messages section -->
     <script src="{% static 'js/toast.js' %}"></script>
     {% endblock %}
 
