--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,80 +1,60 @@
-<!-- Footer -->
+<!-- Footer. Code copied and edited from https://mdbootstrap.com/docs/standard/navigation/footer/-->
 <footer class="bg-primary text-center text-black">
-  <!-- Grid container -->
   <div class="container-fluid p-4 text-black">
-    <!-- Section: Social media -->
+    <!-- Social media icons and links -->
     <section class="mb-4">
       <!-- Facebook -->
       <a class="btn btn-outline-light btn-floating m-1 text-black" href="https://www.facebook.com" target="_blank" rel="noreferrer" aria-label="Go to our Facebook page (opens in new tab)" role="button"
         ><i class="fab fa-facebook-f"></i
       ></a>
-
       <!-- Twitter -->
       <a class="btn btn-outline-light btn-floating m-1 text-black" href="https://www.twitter.com" target="_blank" rel="noreferrer" aria-label="Go to our Twitter page (opens in new tab)" role="button"
         ><i class="fab fa-twitter"></i
       ></a>
-
       <!-- Instagram -->
       <a class="btn btn-outline-light btn-floating m-1 text-black" href="https://www.instagram.com" target="_blank" rel="noreferrer" aria-label="Go to our Instagram page (opens in new tab)" role="button"
         ><i class="fab fa-instagram"></i
       ></a>
-
       <!-- Linkedin -->
       <a class="btn btn-outline-light btn-floating m-1 text-black" href="https://www.Linkedincom" target="_blank" rel="noreferrer" aria-label="Go to our LinkedIn page (opens in new tab)" role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
     </section>
-    <!-- Section: Social media -->
 
-    <!-- Section: Form -->
+    <!-- Newsletter Signup -->
     <section class="">
       <form action="">
-        <!--Grid row-->
         <div class="row d-flex justify-content-center">
-          <!--Grid column-->
           <div class="col-auto">
             <p class="pt-2">
               <strong>Sign up for our newsletter</strong>
             </p>
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
           <div class="col-md-5 col-12">
             <!-- Email input -->
             <div class="form-outline form-white mb-4">
               <input type="email" id="form5Example21" class="form-control" placeholder="Enter your email address" />
             </div>
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
           <div class="col-auto">
             <!-- Submit button -->
             <button type="submit" class="btn btn-outline-light mb-4 text-black">
               Subscribe
             </button>
           </div>
-          <!--Grid column-->
         </div>
-        <!--Grid row-->
       </form>
     </section>
-    <!-- Section: Form -->
-
-    <!-- Section: Text -->
+<!-- Footer text -->
     <section class="mb-4">
       <p>
         Shop Active is an online shop selling gymwear, home gym equipment and gym accessories
       </p>
     </section>
-    <!-- Section: Text -->
 
-    <!-- Section: Links -->
+    <!-- Website Navigation Links -->
     <section class="">
-      <!--Grid row-->
       <div class="row">
-        <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Gymwear</h5>
 
@@ -90,9 +70,8 @@
             </li>
           </ul>
         </div>
-        <!--Grid column-->
 
-        <!--Grid column-->
+
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Home Gym</h5>
 
@@ -111,9 +90,9 @@
             </li>
           </ul>
         </div>
-        <!--Grid column-->
+        
 
-        <!--Grid column-->
+        
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Gym Accessories</h5>
 
@@ -126,9 +105,9 @@
             </li>
           </ul>
         </div>
-        <!--Grid column-->
+        
 
-        <!--Grid column-->
+        
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Website</h5>
 
@@ -156,19 +135,13 @@
             {% endif %}
           </ul>
         </div>
-        <!--Grid column-->
       </div>
-      <!--Grid row-->
     </section>
-    <!-- Section: Links -->
   </div>
-  <!-- Grid container -->
 
-  <!-- Copyright -->
+  <!-- Copyright Area -->
   <div class="text-center p-3 container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2023 Copyright:
     <a class="text-white" href="https://shop-active.herokuapp.com/">Shop Active</a>
   </div>
-  <!-- Copyright -->
 </footer>
-<!-- Footer -->
