tidied up footer

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -33,7 +33,7 @@
           <div class="col-md-5 col-12">
             <!-- Email input -->
             <div class="form-outline form-white mb-4">
-              <input type="email" id="form5Example21" class="form-control" placeholder="Enter your email address" />
+              <input type="email" id="newsletter-form" class="form-control" placeholder="Enter your email address" />
             </div>
           </div>
           <div class="col-auto">
