made changes to be tested on heroku deployment that ensures footer is at bottom of page on all screen sizes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,11 @@ body {
     padding: 0%;
     margin: 0%;
 }
+
+.footer p {  /* Selects text inside a <p> tag that is inside a .footer <div> */
+   margin-bottom: 0; /* removes default <p> tag margin from the bottom */
+}
+
 .green-btn {
     background-color: #1E5128;
     color: white;
