altered again to fix large screen footer issue

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer. Code copied and edited from https://mdbootstrap.com/docs/standard/navigation/footer/-->
-<footer class="bg-primary text-center text-black navbar-fixed-bottom">
+<footer class="mt-auto bg-primary text-center text-black navbar-fixed-bottom">
   <div class="container-fluid p-4 text-black">
     <!-- Social media icons and links -->
     <section class="mb-4">
