altered again to fix large screen footer issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
 <title>Shop Active {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header class="container-fluid fixed-top">
         <!-- Logo -->
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
